# lidar_range_CNN

./: CMakeLists.txt  README.md  requirements.txt  run_slam.py
include/: ErrorHandler.hpp  FrontEnd.hpp  KittiLoader.hpp  LoopClosureDetector.hpp  LoopClosureManager.hpp  LoopClosureNet.hpp  MapEvaluator.hpp  MapManager.hpp  PoseEvaluator.hpp  PoseGraph.hpp  RangeImageGenerator.hpp  RangeImageProjector.hpp  Types.hpp
src/: ErrorHandler.cpp  FrontEnd.cpp  KittiLoader.cpp  LoopClosureDetector.cpp  LoopClosureNet.cpp  MapEvaluator.cpp  MapManager.cpp  PoseEvaluator.cpp  PoseGraph.cpp  RangeImageProjector.cpp  dataset.py  download_imu.py  export_pair_range_cnn.py  main.cpp  model.py  pair_range_cnn_kitti_00_10.pt  pair_range_cnn_kitti_00_10.pth  range_kitti.py  train.py
src/tests/: test_front.cpp
